@@ -21,7 +21,8 @@ XX-XX-22 Adrian Rossiter <adrian@antiprism.com>
             symmetro: added m3 built in color map for better number of sides
             johnson: updated j88-j90 formulas. documented other formulas
             uniform: substring search removed
-            polygon: orientation changed for models 2 -s2, 2 -s4, 4, 5, 6, 8 
+            polygon: orientation changed for models 2 -s2, 2 -s4, 4, 5, 6, 8,
+               construction changed for some models 5 -s3.
             help: added alternate names and wenninger numbering sections
             build: minimum autoconf version changed to 0.69
          Fixes
